# Servidor-de-Chat

./: CMakeLists.txt  README.md  makefile
arquitetura/headers/: chatroom.hpp  client.hpp  message.hpp  server.hpp
docs/: relatorio_analise.md
include/: chatroom.hpp  client.hpp  message.hpp  server.hpp  tslog.hpp
scripts/: test_system.sh
src/: client_main.cpp  server_main.cpp  tslog.cpp
tests/: run_clients.sh  test_tslog_cli.cpp
